--- a/src/app/components/sales/sales-invoices/sales-invoices.component.css
+++ b/src/app/components/sales/sales-invoices/sales-invoices.component.css
@@ -268,3 +268,8 @@ tr, th, td {
 .form-select{
   background-position: left;
 }
+.gray-line {
+  border: none;
+  border-top: 2px solid rgb(206, 206, 206);
+  margin: 0px 0 30px 8px; /* Adjust margin as needed */
+}
