--- a/src/app/components/sales/sales.component.css
+++ b/src/app/components/sales/sales.component.css
@@ -279,3 +279,8 @@ select option[disabled] {
   color:#c9c9ca;/* Placeholder text color */
 }
 
+.gray-line {
+  border: none;
+  border-top: 2px solid rgb(206, 206, 206);
+  margin: 0px 0 30px 8px; /* Adjust margin as needed */
+}
