--- a/src/app/components/projects-and-contracts/contracts/contracts.component.css
+++ b/src/app/components/projects-and-contracts/contracts/contracts.component.css
@@ -221,8 +221,9 @@ tr, th, tr, input, select {
 
 
 .dropdown-item:hover {
-  background-color: #224273 !important; /* Custom hover color */
-  color: white !important; /* Custom hover text color */
+  background-color: #e7e7ea !important; /* Custom hover color */
+  color: #333 !important; /* Custom hover text color */
+  border-radius: 5px;
 }
 
 .scroll-buttons-container {
@@ -444,5 +445,12 @@ tr, th, tr {
   background-color: #ffff; /* Your custom background color */
 }
 
-
+.dropdown-menu {
+  display: block;
+  /* position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  z-index: 1; */
+}
 
