--- a/src/app/components/sales/clients/contacts/contacts.component.html
+++ b/src/app/components/sales/clients/contacts/contacts.component.html
@@ -299,14 +299,8 @@
                                     <label for="taskField4">جنسية جهه التواصل</label>
                                     <select id="taskField4" name="nationality" formControlName="nationality" class="form-control custom-input">
                                         <option value="" disabled selected>قم باختيار جنسية جهه التواصل</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option> 
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
+                                        <option *ngFor="let item of nationalities, index as i " [value]="i">{{item}}</option>
+                                
 
                                     </select> 
                                 </div>
