--- a/src/app/components/sales/clients/repayment-period/repayment-period.component.html
+++ b/src/app/components/sales/clients/repayment-period/repayment-period.component.html
@@ -134,28 +134,19 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
+                                        <tr *ngFor="let item of periods">
                                             
                                             <td> </td>
-                                            <td>48</td>
-                                            <td>San Francisco</td>
+                                            <td>{{item.invoicePaymentPeriodDays}}</td>
+                                            <td>{{item.description}}</td>
                                             <td>Chief Operating Officer (COO)</td>
                                             <td>2010/03/11</td>
-                                            <td>Fiona Green</td>
+                                            <td>{{item.name}}</td>
                                             <td> <input type="checkbox" class="large-checkbox" />
                                             </td>
 
                                         </tr>
-                                        <tr>
-                                            <td> </td>
-                                            <td>48</td>
-                                            <td>San Francisco</td>
-                                            <td>Chief Operating Officer (COO)</td>
-                                            <td>2010/03/11</td>
-                                            <td>Fiona Green</td>
-                                            <td> <input type="checkbox" class="large-checkbox" />
-                                            </td>
-                                        </tr>
+                                     
                                     </tbody>
                                 </table>
                             </div>
@@ -180,14 +171,14 @@
                 </h5>
             </div>
             <div class="modal-body">
-                <form>
+                <form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
                     <div class="container">
                         <!-- Row with two fields -->
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="field4 text-end"> اسم فترة السداد</label>
-                                    <input type="text" id="field3"  class="form-control"
+                                    <input type="text" id="name" formControlName="name" class="form-control"
                                         placeholder="اسم فترة السداد" />
                                 </div>
                             </div>
@@ -195,56 +186,41 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="location" class="form-label">المنشأ</label>
-                                    <div class="input-group">
-                                        <select class="form-select form-control" id="location">
-                                            <option selected>قم بإختيار المنشأ</option>
-                                            <option value="1">المنشأ 1</option>
-                                            <option value="2">المنشأ 2</option>
-                                            <option value="3">المنشأ 3</option>
-                                        </select>
-                                    </div>
-                                </div>
-                               
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="field4 text-end"> تاريخ الإنشاء</label>
-                                    <input type="date" id="field3"  class="form-control"
-                                        placeholder="تاريخ الإنشاء" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <label for="field4 text-end"> فترة السداد من تاريخ الفاتورة</label>
-                                    <input type="text" id="field3"  class="form-control"
-                                        placeholder="عدد الأيام من تاريخ الفاتورة" />
+                                    <input type="number" id="invoicePaymentPeriodDays" formControlName="invoicePaymentPeriodDays"  class="form-control"
+                                        placeholder="عدد الأيام من تاريخ الفاتورة" min="0" />
                                 </div>
                             </div>
                         </div>
                      
                          <!-- ألمرفقات -->
-                            <div class="container mt-5">
+                         <div class="container mt-5">
                             <h5 class="mb-3">المرفقات</h5>
-                            <button class="btn btn-link text-muted p-1"><i class="fa fa-microphone"></i></button>
-            
-                            <button class="btn btn-link text-muted p-1"><i class="fa fa-paperclip"></i></button>
-            
-                            <div class="custom-file-upload">
+                            <button class="btn btn-link text-muted p-1" ><i class="fa fa-microphone"></i></button>
+          
+                            <button class="btn btn-link text-muted p-1" ><i (click)="fileInput.click()" class="fa fa-paperclip"></i></button>
+          
+                            <div class="custom-file-upload" (click)="fileInput.click()" (drop)="onFileDropped($event)" (dragover)="onDragOver($event)"
+                              (dragleave)="onDragLeave($event)">
                               <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
                               <p>حدد ملفًا أو قم بالسحب والإسقاط هنا</p>
                               <small class="text-muted">JPG, PNG or PDF; file size no more than 10MB</small>
+          
+                              <!-- Hidden file input for clicking to upload -->
+                              <input type="file" #fileInput (change)="onFileSelected($event)" hidden>
+          
+                              <!-- Trigger file input on click -->
+                              <button class="btn btn-link text-muted p-1" (click)="fileInput.click()">Upload File</button>
                             </div>
-                          </div>
+          
+                        </div>
                           
                           <div class="row mb-3">
                             <div class="col-md-12 ">
                               <label for="Textarea1">وصف فترة السداد</label>
-                              <textarea class="form-control" id="Textarea1" rows="3"></textarea>
+                              <textarea class="form-control" id="description" formControlName="description" rows="3"></textarea>
                             </div>
                           </div>
 
@@ -255,7 +231,7 @@
                           <!-- show table button 1 -->
                           
                         <div class="col-md-6 mx-auto ">
-                            <button type="button" class="btn my-button3">
+                            <button type="submit" class="btn my-button3">
                                 اضافه
                                 <i class="fa-solid fa-plus"></i>
                             </button>
