--- a/src/app/components/sales/collections/collections.component.css
+++ b/src/app/components/sales/collections/collections.component.css
@@ -278,3 +278,26 @@ tr, th, td {
       background-color: #E7E7EA;
       border-radius: 10px;
     }
+
+    .gray-line {
+      border: none;
+      border-top: 2px solid rgb(206, 206, 206);
+      margin: 0px 0 30px 8px; /* Adjust margin as needed */
+    }
+
+   
+    /* .dropdown-menu {
+      display: block;
+      position: absolute;
+      background-color: #f9f9f9;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      padding: 10px;
+      z-index: 1;
+    } */
+    /* .dropdown:hover .dropdown-menu {
+      display: block;
+    } */
+    
+    .arrow-icon {
+      cursor: pointer;
+    }
