--- a/src/app/components/sales/return-invoices/return-invoices.component.css
+++ b/src/app/components/sales/return-invoices/return-invoices.component.css
@@ -265,3 +265,9 @@ select.form-select{
     border-color: #ccc;
   }
   
+
+  .gray-line {
+    border: none;
+    border-top: 2px solid rgb(206, 206, 206);
+    margin: 0px 0 30px 8px; /* Adjust margin as needed */
+  }
