--- a/src/app/components/sales/sales-invoices/sales-invoices.component.html
+++ b/src/app/components/sales/sales-invoices/sales-invoices.component.html
@@ -31,6 +31,7 @@
         </ul>
 
       </div>
+      <hr class="gray-line" />
 
       <div class="row">
         <div class="col-md-12">
@@ -118,7 +119,6 @@
                   <thead>
                     <tr class="firstcol">
                         <th><i class="fa-solid fa-arrow-right-arrow-left"></i></th>
-                        <th>الحالة</th>
                       <th>المندوب</th>
                       <th>العميل</th>
                       <th>تاريخ الانشاء</th>
@@ -126,26 +126,25 @@
                       <th>تاريخ الانشاء</th>
                       <th>مسلسل</th>
                       <th class="firstcolright">
-                        <input type="checkbox" class="large-checkbox mx-1" />
+                        <input type="checkbox" [(ngModel)]="selectAll" (change)="toggleAllCheckboxes()" class="large-checkbox mx-1" />
                       </th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let item of salesIvoices; let i =index">
-                        <td><select class="form-select form-control" style="width:90px;" >
-                          <option selected disabled>تغيير الحالة</option>
+                    <tr *ngFor="let item of salesIvoices; let i =index" [class.selected]="item.id === selectedNoteId" (click)="selectNoteId(item)">
+                        <td><select class="form-select form-control" [(ngModel)]="item.invoiceStatus" (change)="updatesalesInvoiceStatus(item)" style="width:90px;" >
+                          <option selected disabled>{{ item.invoiceStatusName }}</option>
                           <option *ngFor="let type of invoiceStatusList" [value]="type.key">
                              {{type.value}}</option>
                           
                       </select> </td>
-                      <td>{{ item.invoiceStatus }}</td>
                       <td>{{item.representativeName}}</td>
                       <td>{{item.clientName}}</td>
                       <td>2024/03/11</td>
                       <td>48</td>
                       <td>2024/03/11</td>
                       <td>{{i + 1}}</td>
-                      <td> <input type="checkbox" (change)="onCheckboxChange(item)" class="large-checkbox mx-1" />
+                      <td> <input type="checkbox" [(ngModel)]="item.checked" (change)="onCheckboxChange(item)" class="large-checkbox mx-1" />
                       </td>
                     </tr>
                  
@@ -708,7 +707,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title text-end flex-row-reverse" id="staticBackdropLabel">
-          اضافه عرض بيع
+          اضافه فاتورة بيع
         </h5>
       </div>
       <div class="modal-body">
