--- a/src/app/components/stock/categories/type-category/type-category.component.html
+++ b/src/app/components/stock/categories/type-category/type-category.component.html
@@ -63,10 +63,17 @@
                       <i class="fa-solid fa-print"></i>
                       طباعه
                     </button>
-                    <button type="button" class="btn ms-3 my-button2">
-                      <i class="fa-solid fa-gear"></i>
-                      الاجراءات
-                    </button>
+                    <div class="dropdown" [class.show]="isDropdownOpen">
+                      <button type="button" class="btn ms-3 my-button2" (click)="toggleDropdown()">
+                        <i class="fa-solid fa-gear"></i> الاجراءات
+                      </button>
+                      
+                      <div class="dropdown-menu" [class.show]="isDropdownOpen">
+                        <a class="dropdown-item" (click)="openModalForSelected()">تعديل</a>
+                        <!-- <a class="dropdown-item" href="#">عرض</a> -->
+                        <a class="dropdown-item" (click)="deleteItemType()">حذف</a>
+                      </div>
+                    </div>
                   </div>
                 </div>
   
@@ -143,24 +150,65 @@
                           <th>تاريخ الانشاء</th>
                           <th>اسم فئه الصنف باللغه المحلية</th>
                           <th>اسم فئه الصنف</th>
+                          <th> المسلسل</th>
                           <th class="firstcolright">
-                            <input type="checkbox" class="large-checkbox" />
-                          </th>
+                            <span class="mx-1" *ngIf="selectedCount>0">{{ selectedCount }}</span>
+
+                            <input type="checkbox" [(ngModel)]="selectAll" (change)="toggleAllCheckboxes()" class="large-checkbox mx-1" /></th>
+                     
                         </tr>
                       </thead>
                       <tbody>
-                        <tr *ngFor="let item of storesSec">
+                        <tr *ngFor="let item of storesSec, let i =index">
                           <td>{{item.note}}</td>
                           <td>Chief Operating Officer (COO)</td>
                           <td>San Francisco</td>
                           <td>{{item.localName}}</td>
                           <td>{{item.name}}</td>
-                          <td><input type="checkbox" class="large-checkbox" />
+                          <td>{{ i+1 }}</td>
+                          <td>
+                            <input type="checkbox" [(ngModel)]="item.checked"  (change)="onCheckboxChange(item)" class="large-checkbox" />
+
                           </td>
                         </tr>
                       
                       </tbody>
                     </table>
+
+                          <!-- paging -->
+                <nav aria-label="Page navigation">
+                  <ul class="pagination justify-content-end">
+                    <!-- Previous Button -->
+                    <li class="page-item" [class.disabled]="pageNumber === 1">
+                      <a class="page-link" href="#" (click)="changePage(pageNumber - 1)" tabindex="-1" [attr.aria-disabled]="pageNumber === 1 ? true : null">&laquo;</a>
+                    </li>
+                
+                    <!-- Page Numbers -->
+                    <li class="page-item" [class.active]="pageNumber === 1">
+                      <a class="page-link" (click)="changePage(1)">1</a>
+                    </li>
+                    <li class="page-item" [class.active]="pageNumber === 2">
+                      <a class="page-link" (click)="changePage(2)">2</a>
+                    </li>
+                    <li class="page-item" [class.active]="pageNumber === 3">
+                      <a class="page-link" (click)="changePage(3)">3</a>
+                    </li>
+                    <li class="page-item" [class.active]="pageNumber === 4">
+                      <a class="page-link" (click)="changePage(4)">4</a>
+                    </li>
+                    <li class="page-item" [class.active]="pageNumber === 5">
+                      <a class="page-link" (click)="changePage(5)">5</a>
+                    </li>
+                
+                    <!-- Ellipsis for more pages (can be enhanced later for large page sets) -->
+                    <li class="page-item"><a class="page-link">...</a></li>
+                
+                    <!-- Next Button -->
+                    <li class="page-item">
+                      <a class="page-link" (click)="changePage(pageNumber + 1)">&raquo;</a>
+                    </li>
+                  </ul>
+                </nav>
                   </div>
                 </div>
               </div>
@@ -228,52 +276,26 @@
   
           
   
-              <!-- Row with three fields -->
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="field3"> المنشأ</label>
-                    <input
-                      type="text"
-                      id="field3"
-                
-                      class="form-control custom-input"
-                      placeholder="اسم المنشأ"
-                    />
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="field4"> تاريخ الانشاء</label>
-                    <input
-                    type="date"
-                    id="field2"
-                   
-                    class="form-control custom-input"
-                    placeholder="قم باختيار التاريخ"
-                  />
-                  </div>
-                </div>
-
-              </div>
 
               <div class="container mt-5">
                 <h5 class="mb-3">المرفقات</h5>
-                <button class="btn btn-link text-muted p-1">
-                  <i class="fa fa-microphone"></i>
-                </button>
-
-                <button class="btn btn-link text-muted p-1">
-                  <i class="fa fa-paperclip"></i>
-                </button>
-
-                <div class="custom-file-upload">
+                <button class="btn btn-link text-muted p-1" ><i class="fa fa-microphone"></i></button>
+  
+                <button class="btn btn-link text-muted p-1" ><i (click)="fileInput.click()" class="fa fa-paperclip"></i></button>
+  
+                <div class="custom-file-upload" (click)="fileInput.click()" (drop)="onFileDropped($event)" (dragover)="onDragOver($event)"
+                  (dragleave)="onDragLeave($event)">
                   <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
                   <p>حدد ملفًا أو قم بالسحب والإسقاط هنا</p>
-                  <small class="text-muted"
-                    >JPG, PNG or PDF; file size no more than 10MB</small
-                  >
+                  <small class="text-muted">JPG, PNG or PDF; file size no more than 10MB</small>
+  
+                  <!-- Hidden file input for clicking to upload -->
+                  <input type="file" #fileInput (change)="onFileSelected($event)" hidden>
+  
+                  <!-- Trigger file input on click -->
+                  <button class="btn btn-link text-muted p-1" (click)="fileInput.click()">Upload File</button>
                 </div>
+  
               </div>
 
               <div class="row">
@@ -315,3 +337,144 @@
     </div>
   </div>
   
+<!-- Update -->
+<div
+class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" style="display: block;" *ngIf="isModalOpen"
+>
+<div class="modal-dialog modal-lg">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5
+        class="modal-title text-end flex-row-reverse"
+        id="staticBackdropLabel"
+      >
+         تعديل فئه الصنف
+      </h5>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="TypeCatForm" (ngSubmit)="updateCategory()">
+        <div class="container">
+          <!-- Row with two fields -->
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name text-end"> اسم فئه الصنف</label>
+                <input
+                  type="text"
+                  id="name"
+                  formControlName="name"
+
+                  class="form-control custom-input"
+                  placeholder="اسم فئه الصنف"
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="field2 text-end"
+                  >اسم فئه الصنف باللغه المحليه
+                </label>
+                <input
+                  type="text"
+                  formControlName="localName"
+
+                  id="localName"
+                 
+                  class="form-control custom-input"
+                  placeholder="Item category name"
+                />
+              </div>
+            </div>
+          </div>
+
+      
+
+          <!-- Row with three fields -->
+          <!-- <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="field3"> المنشأ</label>
+                <input
+                  type="text"
+                  id="field3"
+            
+                  class="form-control custom-input"
+                  placeholder="اسم المنشأ"
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="field4"> تاريخ الانشاء</label>
+                <input
+                type="date"
+                id="field2"
+               
+                class="form-control custom-input"
+                placeholder="قم باختيار التاريخ"
+              />
+              </div>
+            </div>
+
+          </div> -->
+
+          <div class="container mt-5">
+            <h5 class="mb-3">المرفقات</h5>
+            <button class="btn btn-link text-muted p-1" ><i class="fa fa-microphone"></i></button>
+
+            <button class="btn btn-link text-muted p-1" ><i (click)="fileInput.click()" class="fa fa-paperclip"></i></button>
+
+            <div class="custom-file-upload" (click)="fileInput.click()" (drop)="onFileDropped($event)" (dragover)="onDragOver($event)"
+              (dragleave)="onDragLeave($event)">
+              <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
+              <p>حدد ملفًا أو قم بالسحب والإسقاط هنا</p>
+              <small class="text-muted">JPG, PNG or PDF; file size no more than 10MB</small>
+
+              <!-- Hidden file input for clicking to upload -->
+              <input type="file" #fileInput (change)="onFileSelected($event)" hidden>
+
+              <!-- Trigger file input on click -->
+              <button class="btn btn-link text-muted p-1" (click)="fileInput.click()">Upload File</button>
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="field1 text-end">وصف فئه الصنف</label>
+                <textarea
+                  class="form-control custom-input"
+                  formControlName="note"
+
+                  id="note"
+                  rows="3"
+                ></textarea>
+              </div>
+            </div>
+          </div>
+
+          
+
+          <button type="button my-button3" class="btn my-button3">
+            حفظ
+            
+          </button>
+
+          <button
+            type="button"
+            class="btn closebutton"
+            data-bs-dismiss="modal"
+          >
+            الغاء
+          </button>
+        
+   
+
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+</div>
+
