--- a/src/app/components/stock/storehouse/storage/storage.component.html
+++ b/src/app/components/stock/storehouse/storage/storage.component.html
@@ -63,10 +63,17 @@
                       <i class="fa-solid fa-print"></i>
                       طباعه
                     </button>
-                    <button type="button" class="btn ms-3 my-button2">
-                      <i class="fa-solid fa-gear"></i>
-                      الاجراءات
-                    </button>
+                    <div class="dropdown" [class.show]="isDropdownOpen">
+                      <button type="button" class="btn ms-3 my-button2" (click)="toggleDropdown()">
+                        <i class="fa-solid fa-gear"></i> الاجراءات
+                      </button>
+                      
+                      <div class="dropdown-menu" [class.show]="isDropdownOpen">
+                        <a class="dropdown-item" (click)="openModalForSelected()">تعديل</a>
+                        <!-- <a class="dropdown-item" href="#">عرض</a> -->
+                        <a class="dropdown-item" (click)="deleteItemType()">حذف</a>
+                      </div>
+                    </div>
                   </div>
                 </div>
   
@@ -144,30 +151,25 @@
                           <th>تاريخ الانشاء</th>
                           <th>اسم اماكن التخزين باللغه المحلية</th>
                           <th>اسم اماكن التخزين</th>
+                          <th>المسلسل</th>
                           <th class="firstcolright">
-                            <input type="checkbox" class="large-checkbox" />
+                            <input type="checkbox" [(ngModel)]="selectAll" (change)="toggleAllCheckboxes()" class="large-checkbox" />
                           </th>
                         </tr>
                       </thead>
                       <tbody >
-                        <tr *ngFor="let item of stores">
+                        <tr *ngFor="let item of stores, let i= index">
                           <td>{{ item.note}}</td>
                           <td></td>
                           <td></td>
                           <td>{{item.localName}}</td>
                           <td>{{item.name}}</td>
+                          <td>{{ i+1 }}</td>
                           <td class="firstcolright">
-                            <input type="checkbox" class="large-checkbox" />
+                            <input type="checkbox" [(ngModel)]="item.checked" (change)="onCheckboxChange(item)" class="large-checkbox" />
                           </td>
                         </tr>
-                        <!-- <tr>
-                          <td>Shou Itou</td>
-                          <td>Regional Marketing</td>
-                          <td>Tokyo</td>
-                          <td>20</td>
-                          <td>2011/08/14</td>
-                          <td>$163,000</td>
-                        </tr> -->
+                  
                       </tbody>
                     </table>
 
@@ -276,45 +278,16 @@
           
   
               <!-- Row with three fields -->
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="field3"> المنشأ</label>
-                    <input
-                      type="text"
-                      id="field3"
-                      
-                      class="form-control custom-input"
-                      placeholder="اسم المنشأ"
-                    />
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="field4"> تاريخ الانشاء</label>
-                    <input
-                    type="date"
-                    id="field2"
-                    
-                    class="form-control custom-input"
-                    placeholder="قم باختيار التاريخ"
-                  />
-                  </div>
-                </div>
-
-              </div>
+          
 
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="field3"> اختيار المستودع</label>
-                    <input
-                      type="text"
-                      id="field3"
-                      
-                      class="form-control custom-input"
-                      placeholder=" قم باختيار المستودع "
-                    />
+                    <select class="form-control form-select" formControlName="warehouseId">
+                      <option value="">قم باختيار المستودع</option>
+                      <option *ngFor="let item of storehouse" [value]="item.id">{{item.name}}</option>
+                    </select>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -323,7 +296,7 @@
                     <input
                     type="text"
                     id="field2"
-                    formControlName="code"
+                    disabled
                     class="form-control custom-input"
                     placeholder="قم بكتابه كود اماكن التخزين"
                   />
@@ -334,21 +307,23 @@
 
               <div class="container mt-5">
                 <h5 class="mb-3">المرفقات</h5>
-                <button class="btn btn-link text-muted p-1">
-                  <i class="fa fa-microphone"></i>
-                </button>
-
-                <button class="btn btn-link text-muted p-1">
-                  <i class="fa fa-paperclip"></i>
-                </button>
-
-                <div class="custom-file-upload">
+                <button class="btn btn-link text-muted p-1" ><i class="fa fa-microphone"></i></button>
+  
+                <button class="btn btn-link text-muted p-1" ><i (click)="fileInput.click()" class="fa fa-paperclip"></i></button>
+  
+                <div class="custom-file-upload" (click)="fileInput.click()" (drop)="onFileDropped($event)" (dragover)="onDragOver($event)"
+                  (dragleave)="onDragLeave($event)">
                   <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
                   <p>حدد ملفًا أو قم بالسحب والإسقاط هنا</p>
-                  <small class="text-muted"
-                    >JPG, PNG or PDF; file size no more than 10MB</small
-                  >
+                  <small class="text-muted">JPG, PNG or PDF; file size no more than 10MB</small>
+  
+                  <!-- Hidden file input for clicking to upload -->
+                  <input type="file" #fileInput (change)="onFileSelected($event)" hidden>
+  
+                  <!-- Trigger file input on click -->
+                  <button class="btn btn-link text-muted p-1" (click)="fileInput.click()">Upload File</button>
                 </div>
+  
               </div>
 
               <div class="row">
@@ -391,3 +366,141 @@
     </div>
   </div>
   
+
+  <!-- update -->
+  <div
+  class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" style="display: block;" *ngIf="isModalOpen"
+>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5
+          class="modal-title text-end flex-row-reverse"
+          id="staticBackdropLabel"
+        >
+           تعديل اماكن التخزين
+        </h5>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="updateCategory()" [formGroup]="myForm">
+          <div class="container">
+            <!-- Row with two fields -->
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="field1 text-end"> اسم اماكن التخزين</label>
+                  <input
+                    type="text"
+                    id="field1"
+                    formControlName="name"
+                    class="form-control custom-input"
+                    placeholder="اسم اماكن التخزين"
+                  />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="field2 text-end"
+                    >اسم اماكن التخزين باللغه المحليه
+                  </label>
+                  <input
+                    type="text"
+                    id="field2"
+                    formControlName="localName"
+                    class="form-control custom-input"
+                    placeholder="Storage places"
+                  />
+                </div>
+              </div>
+            </div>
+
+        
+
+            <!-- Row with three fields -->
+        
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="field3"> اختيار المستودع</label>
+                  <select class="form-control form-select" formControlName="warehouseId">
+                    <option value="">قم باختيار المستودع</option>
+                    <option *ngFor="let item of storehouse" [value]="item.id">{{item.name}}</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="field4">كود اماكن التخزين </label>
+                  <input
+                  type="text"
+                  id="field2"
+                  disabled
+                  class="form-control custom-input"
+                  placeholder="قم بكتابه كود اماكن التخزين"
+                />
+                </div>
+              </div>
+
+            </div>
+
+            <div class="container mt-5">
+              <h5 class="mb-3">المرفقات</h5>
+              <button class="btn btn-link text-muted p-1" ><i class="fa fa-microphone"></i></button>
+
+              <button class="btn btn-link text-muted p-1" ><i (click)="fileInput.click()" class="fa fa-paperclip"></i></button>
+
+              <div class="custom-file-upload" (click)="fileInput.click()" (drop)="onFileDropped($event)" (dragover)="onDragOver($event)"
+                (dragleave)="onDragLeave($event)">
+                <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
+                <p>حدد ملفًا أو قم بالسحب والإسقاط هنا</p>
+                <small class="text-muted">JPG, PNG or PDF; file size no more than 10MB</small>
+
+                <!-- Hidden file input for clicking to upload -->
+                <input type="file" #fileInput (change)="onFileSelected($event)" hidden>
+
+                <!-- Trigger file input on click -->
+                <button class="btn btn-link text-muted p-1" (click)="fileInput.click()">Upload File</button>
+              </div>
+
+            </div>
+
+            <div class="row">
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label for="field1 text-end">وصف اماكن التخزين</label>
+                  <textarea
+                    class="form-control custom-input"
+                    formControlName="note"
+                    id="Textarea1"
+                    rows="3"
+                  ></textarea>
+                </div>
+              </div>
+            </div>
+
+            
+         
+            <div class="col-md-6 mx-auto ">
+
+            <button type="button my-button3" class="btn my-button3">
+              حفظ
+            </button>
+
+            <button
+              type="button"
+              class="btn closebutton"
+              data-bs-dismiss="modal"
+            >
+              الغاء
+            </button>
+            </div>
+          
+     
+  
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
