--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
 
 @import 'ngx-toastr/toastr';
 
@@ -9,7 +9,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
  /* font */
- h2,h1,
+ h2,h1,h4,
  h3,
  h5,
 a,
@@ -18,7 +18,7 @@ p,
 label,
 input,
 button,
-span,select, option {
+span,select, option , form, textarea{
    font-family: "Cairo", sans-serif;
    font-optical-sizing: auto;
    font-weight: 600;
